default/objects/success__Set__c/success__Set__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED</description>
    <label>DEPRECATED - Set</label>
    <nameField>
        <label>Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DEPRECATED - Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>