default/objects/success__Set__c/fields/success__Default__c.field-meta.xml
<CustomField>
    <fullName>success__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>