default/objects/success__Set__c/fields/success__First_Level_Label__c.field-meta.xml
<CustomField>
    <fullName>success__First_Level_Label__c</fullName>
    <label>First Level Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>