default/objects/success__Set__c/fields/success__Level_Badge_Type__c.field-meta.xml
<CustomField>
    <fullName>success__Level_Badge_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level Badge Type</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Badge Types can be selected</errorMessage>
        <filterItems>
            <field>success__Graphic__c.success__Type__c</field>
            <operation>equals</operation>
            <value>Badge</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>success__Graphic__c</referenceTo>
    <relationshipLabel>Sets</relationshipLabel>
    <relationshipName>Sets</relationshipName>
    <type>Lookup</type>
</CustomField>